examples/9-service-nginx-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec: 
  rules:
    - host: nginx.thanos.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx-svc-ingress
                port:
                  number: 80
